<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Taku</string>
    <string name="dashboard">仪表盘</string>
    <string name="sports_games">运动游戏</string>
    <string name="history">历史记录</string>
    <string name="network_games">联网游戏</string>
    <string name="settings">设置</string>
    <string name="taku">踏库</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- 蓝牙设置 -->
    <string name="search_toy">搜索玩具</string>
    <string name="searching">正在搜索...</string>
    <string name="enter_mall">点击进入连酷玩具商城</string>
    <string name="bluetooth">蓝牙</string>
    <string name="bluetooth_help">蓝牙帮助</string>
    <string name="devices_available">连接踏步机</string>
    <string name="click_and_connect">点击列表即可连接</string>
    <string name="switch_on_bluetooth_to_search_toy">要搜索连酷玩具，请打开蓝牙功能</string>
    <string name="switching_on_bluetooth">正在打开蓝牙</string>
    <string name="switching_off_bluetooth">正在关闭蓝牙</string>
    <string name="connected">已连接</string>
    <string name="bonded">已配对未连接</string>
    <string name="bonding">正在配对</string>
    <string name="unbond">未配对</string>

    <!-- Toast-蓝牙设置 -->
    <string name="dialog_bonding_bluetooth">正在绑定玩具...</string>
    <string name="toast_toy_unbonded">绑定拉玩具失败</string>
    <string name="toast_open_bluetooth_wait">正在打开蓝牙,请稍后</string>
    <string name="toast_close_bluetooth_wait">正在关闭蓝牙，请稍后</string>
    <string name="toast_pls_open_bluetooth">请打开蓝牙</string>
    <string name="toast_bluetooth_open">蓝牙已打开</string>
    <string name="toast_bluetooth_closed">蓝牙已关闭</string>
    <string name="toast_searching_toy_over">搜索蓝牙设备完毕!</string>
    <string name="toast_no_device_nearby">附近没有搜索到设备</string>
    <string name="toast_connecting_toy">正在与玩具连接...</string>
    <string name="toast_connect_toy_success">连接玩具成功!</string>
    <string name="toast_connect_toy_failure">连接玩具失败，请确认玩具是否打开!</string>
    <string name="toast_bond_toy_success">玩具配对成功!</string>
    <string name="toast_toy_disconnect_pls_set">玩具未连接，请点击右上角设置</string>

    <!-- Toast Network -->
    <string name="toast_connect_network_wait">正在连接网络，请稍等...</string>
    <string name="toast_auto_login_wait">自动登录中，请稍等...</string>
    <string name="toast_register_success">注册成功</string>
    <string name="toast_login_and_waiting">正在登陆哦，请稍后...</string>
    <string name="toast_name_psw_not_null">用户名和密码不能为空</string>
    <string name="toast_check_network">网络错误，请检查网络</string>
    <string name="toast_has_login">已经登录</string>
    <string name="toast_name_psw_wrong">用户名或密码错误</string>
    <string name="toast_not_exist_this_user">不存在当前用户</string>
    <string name="toast_goodname_to_remember">好名字可以让你的朋友更容易记住你</string>
    <string name="toast_change_person_state">换个状态换个心情</string>
    <string name="linkcube_terms_and_conditions">连酷软件许可及服务协议</string>
    <string name="toast_server_noresponse">服务器无响应</string>
    <string name="toast_email_has_used">当前邮箱已被使用</string>
    <string name="toast_network_wrong_try_again">网络异常，请重试</string>
    <string name="toast_username_hasbeen_email">亲，您输入的不是邮箱地址哟～</string>
    <string name="toast_psw_too_short">密码长度太短</string>
    <string name="toast_psw_couldnot_contain_space">密码中不能包含空格</string>
    <string name="toast_psw_not_match">密码不一致，请重新输入</string>

    <!-- 用户相关 -->
    <string name="login_text">登录Taku</string>
    <string name="register_text">注册Taku</string>
    <string name="init_user_info_text">请填写资料</string>
    <string name="login_btn_text">登录</string>
    <string name="logout_btn_text">退出登录</string>
    <string name="register_btn_text">注册</string>
    <string name="email_text">邮箱</string>
    <string name="password_text">密码</string>
    <string name="confirm_password_text">确认密码</string>
    <string name="submit_btn_text">提交</string>
    <string name="save_btn_text">保存</string>
    <string name="user_nickname_text">昵称</string>
    <string name="user_avatar_text">头像</string>
    <string name="user_birthday_text">生日</string>
    <string name="user_height_text">身高(cm)</string>
    <string name="user_weight_text">体重(kg)</string>
    <string name="user_gender_text">性别</string>
    <string name="user_age_text">年龄</string>
    <string name="user_gender_female_text">女</string>
    <string name="user_gender_male_text">男</string>
    <string name="please_login_text">请登录...</string>
    <string name="please_login_first">请登录后查看历史记录</string>
    <string name="sports_accessories">运动配件</string>
    <string name="moving_target">设定每日运动目标</string>
    <string name="historical_records">运动历史记录</string>
    <string name="update_user_info_text">个人资料编辑</string>
    <string name="user_history">您已累计使用Taku:</string>
    <string name="take_photo">拍照</string>
    <string name="pick_photo">从相册中选择 </string>
    <string name="attachToContact">选择 </string>
    <string name="photoPickerNotFoundText">照片文件未找到 </string>
    <string name="is_logining">正在登录中...</string>
    <string name="is_updating_user_info">正在更新用户信息...</string>
    <!-- 设置界面 -->
    <string name="setting_title_text">设置</string>
    <string name="checkout_for_update_text">检测更新</string>
    <string name="about_us_text">关于linkcube</string>
    
    <!-- 意见反馈 -->
    <string name="character_exceed">你输入的字数已经超过了限制！</string>
    <string name="thanks_feed_back">感谢您的反馈意见！</string>
    <string name="limit_word">字</string>
    <string name="feedback_email">邮箱</string>
    <string name="feedback_text">意见反馈</string>

</resources>