<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:menuItem="http://schemas.android.com/apk/res/me.linkcube.taku"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg"
    android:orientation="vertical" >

    <me.linkcube.taku.view.TitleView
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </me.linkcube.taku.view.TitleView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/LayoutContentPadding"
        android:paddingRight="@dimen/LayoutContentPadding" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_white" />

        <me.linkcube.taku.view.MenuItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            menuItem:TitleText="@string/checkout_for_update_text"
            menuItem:TitleTextSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_white" />

        <me.linkcube.taku.view.MenuItem
            android:id="@+id/feedbackItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            menuItem:TitleText="@string/feedback_text"
            menuItem:TitleTextSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_white" />

        <me.linkcube.taku.view.MenuItem
            android:id="@+id/aboutUsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            menuItem:TitleText="@string/about_us_text"
            menuItem:TitleTextSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_white" />
    </LinearLayout>

    <Button
        android:id="@+id/setting_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/user_btn_bg"
        android:text="@string/login_btn_text"
        android:textColor="@drawable/user_btn_color"
        android:layout_marginLeft="@dimen/BtnMargin"
        android:layout_marginRight="@dimen/BtnMargin"
        android:textSize="20sp" />


</LinearLayout>