<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:menuItem="http://schemas.android.com/apk/res/me.linkcube.taku"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="30dp" >

    <me.linkcube.taku.view.CircularImage
        android:id="@+id/userAvatarIv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitCenter"
        android:background="@drawable/defalut_user_avatar" />

    <TextView
        android:id="@+id/userNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="taku"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/userGenderIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/user_gender_male" />

        <TextView
            android:id="@+id/userAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="26"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_bg"
        android:orientation="vertical"
        android:paddingLeft="@dimen/LayoutContentPadding"
        android:paddingRight="@dimen/LayoutContentPadding" >

        <me.linkcube.taku.view.MenuItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            menuItem:TitleText="@string/sports_accessories"
            menuItem:TitleTextColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_black" />

        <me.linkcube.taku.view.MenuItem
            android:id="@+id/movingTargetItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            menuItem:TitleText="@string/moving_target"
            menuItem:TitleTextColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black" />

        <me.linkcube.taku.view.MenuItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            menuItem:TitleText="@string/historical_records"
            menuItem:TitleTextColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_black" />
    </LinearLayout>

</LinearLayout>