<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ActionBarHeight"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/ActionBarPadding"
        android:paddingRight="@dimen/ActionBarPadding" >

        <ImageButton
            android:id="@+id/back_imgBtn"
            android:layout_width="@dimen/ActionBarButtonSize"
            android:layout_height="@dimen/ActionBarButtonSize"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:background="@drawable/back_img"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/dashboard_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="运动配件"
            android:textColor="@color/text_green"
            android:textSize="@dimen/ActionBarTextSize" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:background="@drawable/share_button_bg"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/distance_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="蓝牙"
            android:textSize="@dimen/TextSize.Large" />

        <ToggleButton
            android:id="@+id/bluetooth_tb"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#ffffff"
            android:button="@drawable/toggle"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <View style="@style/Setting.Item.Divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:orientation="horizontal"
        android:padding="@dimen/SettingPadding" >

        <TextView
            style="@style/Setting.Item.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/devices_available"
            android:textSize="@dimen/SettingSubTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/click_and_connect"
            android:textSize="@dimen/SettingSubTextSize" />
    </LinearLayout>

    <View style="@style/Setting.Item.Divider" />

    <me.linkcube.taku.ui.bt.BTDeviceListView
        android:id="@id/device_lv"
        style="@style/ListView"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/SettingPadding" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@id/discover_devices_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:text="@string/search_toy" />

        <Button
            android:id="@id/bluetooth_help_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/discover_devices_btn"
            android:text="sos"
            android:textColor="@color/black"
            android:visibility="visible" />
    </RelativeLayout>

</LinearLayout>